# arkaft-adk-agents-detector

./: Cargo.toml  README.md
src/: lib.rs
src/detection/: config_detector.rs  file_validator.rs  integration_tests.rs  mod.rs  project_detector.rs  unit_tests.rs
