[package]
name = "arkaft-adk-agents"
version = "0.1.0"
edition = "2021"
description = "Utilities for detecting and working with Google ADK projects in Kiro IDE"
authors = ["Arkaft Team"]
license = "MIT"
repository = "https://github.com/arkaft/arkaft-adk-agents"

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and path utilities
glob = "0.3"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = []
# Enable async support for future extensions
async = []